# job_parser_4_course

./: README.md  main.py  pyproject.toml
src/: job_search_api.py  user_interaction.py  vacancy.py  vacancy_selection.py  vacancy_to_file.py
